--- a/kubernetes/flux/config/cluster.yaml
+++ b/kubernetes/flux/config/cluster.yaml
@@ -10,7 +10,7 @@ spec:
     branch: main
   secretRef:
     name: github-deploy-key
-  url: ssh://git@github.com/JefeDavis/k8s-HomeOps
+  url: ssh://git@github.com/dpollreisz/homelab
   ignore: |
     # exclude all
     /*
