--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -1,38 +1,37 @@
-apiVersion: v1
-kind: Secret
+apiVersion: ENC[AES256_GCM,data:9gY=,iv:U5awwDw6Q2fkLuq5moukJvpgNCLMD5CmMM0efAvrLZQ=,tag:H9mumPzoi1dEzb4Ha7NBtw==,type:str]
+kind: ENC[AES256_GCM,data:QziTYNAZ,iv:uRWGG6vyIGbYUVCPK6O7PSMVOvFafiWwlnGdpWVrQkE=,tag:0O33s6tQUPFZ/ASNyWesiw==,type:str]
 metadata:
-    name: cluster-secrets
-    namespace: flux-system
+    name: ENC[AES256_GCM,data:KrSkeFrcJNApPXIaOXI6,iv:6P6Evf4Tghq50Zv8fjRG7wtFNLpRVSypj8Q9Jfy5P44=,tag:pc1K9jUMRO6kSdbkEmHFEw==,type:str]
+    namespace: ENC[AES256_GCM,data:LpcmPx6N6MGz9N8=,iv:8CJ3CxQ87MiiQN9QLTCBihpQoO9iyxOLtNgr7JVgVFg=,tag:2P53FXP5gWb3fDbVmhULrQ==,type:str]
 stringData:
-    EMAIL_ADDRESS: ENC[AES256_GCM,data:vSQBIAQcxyW51qLoFH85ZpGA4M/Rsg==,iv:aNY9YCVsnJWHqicx05B3ULWvKLwWPernV7f8f/GERp8=,tag:kHp8k/4us+YS31GzqwAOXw==,type:str]
-    EXTERNAL_DOMAIN: ENC[AES256_GCM,data:0VEHOUQE5FTbACtfvA==,iv:8+8zEUW70b0y6ZgygOrhL5dKEO+xSxpt2yZUyhGiLxc=,tag:zpQK7CH1PZE3NJdXpFwkhg==,type:str]
-    FULL_NAME: ENC[AES256_GCM,data:nfhRavFdnNrZ0g==,iv:9MloYtcDlwBo7IU3QnVmHkq4lpfu242+J+ejQz/ZTmQ=,tag:boGMOzfU7OCvP4qCFkr2zQ==,type:str]
-    INTERNAL_DOMAIN: ENC[AES256_GCM,data:v+ejccJP+QB4iGG/G1jQNMrrEWhYmw==,iv:ApPy6jx+yPk8A/zx3HK14vgWEMQDL5w5/12pnoNtlqA=,tag:n0PJKbL20cYQRFeONx7jZA==,type:str]
-    PROFESSIONAL_DOMAIN: ENC[AES256_GCM,data:w0+cllTMmWRVmv/Bog==,iv:ETdGjc/pcU+WrRYOwtSVG4kdHx+RkRLg6ODK2iAOOag=,tag:VShT8SfX1Omv/E108FelyA==,type:str]
-    SECRET_MAXMIND_ACCOUNT_ID: ENC[AES256_GCM,data:+LujP1eV,iv:IHjPtvVzcrpbzTZdy5iyxgjKV+KycIH5CqVJMRDS+Wg=,tag:10hjc1E6e19vYE+a9YP0UQ==,type:str]
-    SECRET_MAXMIND_LICENSE_KEY: ENC[AES256_GCM,data:odPe9Qt/FEj7BgSx9coraUM6Pofki+lbOi8CRRCsSJ/BkjYtghHOYw==,iv:pg+nxYjaWQq0vujthE3Ah0bPEkEl2a3rgD++e8n5nGI=,tag:q25JC5Im2vXxFKuikOsM/w==,type:str]
-    SECRET_SENDGRID_APIKEY_SMTP_RELAY: ENC[AES256_GCM,data:A5UeFLsq4TY+aMMskgYKn056M0OQ08U8gqx/Nj2MxmTbMOplAXOLIbykWa18vr3cbU6ccz6rDcsbVjIJX6TDb4X4AxVS,iv:4MtzltFMAr4aVkK0OxfmmJE+KqK+wDBf6B0ecBf9M4o=,tag:EKpL+x7z23E+hmCpZwne0A==,type:str]
-    SECRET_SENDGRID_USER_SMTP_RELAY: ENC[AES256_GCM,data:ILiBQzxlDwk=,iv:BXYkO5X8/gShyhObxQ+t9FgN2LnjEUvcBF1hfy7wSTY=,tag:1FUPEGRowCcecrXd0fGwNQ==,type:str]
+    EMAIL_ADDRESS: ENC[AES256_GCM,data:ujwzu1rhAQWX8lzRfjI1oy1UWA==,iv:WLlXgwUjhn2248X+rC+DL/mxLe1YA9Rg0W/k9OsCH1I=,tag:89VJq33Rx4uxZx1nWoijzA==,type:str]
+    EXTERNAL_DOMAIN: ENC[AES256_GCM,data:nVVyRImhgV8jwXPv,iv:nH5ooFkyCoqt1lAQ3vZs+7/SBdLr/v9F4fPMfs8bgVU=,tag:wM3tPTeukblv5b2QYCWM0w==,type:str]
+    FULL_NAME: ENC[AES256_GCM,data:OJmB8KJHmyX4esU9HuK8,iv:fyj7en/4iDb2JwqNCi/2+/8cXx9XyuYaT0PUFgRHkkI=,tag:XcL/ip78rtuIQHaCglNBEg==,type:str]
+    INTERNAL_DOMAIN: ENC[AES256_GCM,data:U+i91/ydaPJsGzh4l55Nijwi1oo+,iv:NHjpKpKNQV+db1lF2kOFXoJvDNdLXThZyyyyuN+Ts50=,tag:u/0/vek9Jw5f1Gaa4le6Og==,type:str]
+    SECRET_MAXMIND_ACCOUNT_ID: ""
+    SECRET_MAXMIND_LICENSE_KEY: ""
+    SECRET_SENDGRID_APIKEY_SMTP_RELAY: ""
+    SECRET_SENDGRID_USER_SMTP_RELAY: ""
 sops:
     kms: []
     gcp_kms:
-        - resource_id: projects/moonlit-watch-362206/locations/global/keyRings/davishaus-keyring/cryptoKeys/sops
-          created_at: "2023-05-23T02:33:14Z"
-          enc: CiQA3rJLN+7Vlrs4hVvkzX9pwanhvjVkQNB1EEzjudJ4lyRWbncSSADC/xGZOmZMqpX6py0idLk+sKa9wD8wuK55EsN5gLRDnxMivTG4UHwXlrN38Oiu8wR1yQGOgNIzCs7UGL9YzWGyNtn4A2oSCw==
+        - resource_id: projects/homelab-411417/locations/global/keyRings/pollreisz-keyring/cryptoKeys/sops
+          created_at: "2024-01-16T18:59:59Z"
+          enc: CiQAFbK3LFS6PPrdgoFtmDIXPp6+fKSarwmo3nvfVo+OZ/c6B5wSSQAN+xHZzNZYu9zjGcWEhJ4dIRlinRi/1CO1yI3NB2DrJrt76uPqdn+8f1ION/ekktjL03f3e2+VgFlOsbdLM9bq0OHP3YWur9w=
     azure_kv: []
     hc_vault: []
     age:
-        - recipient: age1jhlwc2kz4rm95t7hfvrj0mhdg7fwmepj90ap5y26ypxf808xmv8qmhnla5
+        - recipient: age1ujgpmesszpu8z62w5yfg56srzfjd5v9h2n447yslv5njvqdpjuys9zgsv0
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkVXBubVNMaTQrUE0xbGgz
-            R1ZqS05UVkhIcEtWNlRIWGFzWjhmelZEVGlFCmpNeTloYXo0Q2MxUy9CdmdpcCtO
-            Vjh6MlBLK0lRZStlbVVuV0RZSVljSVUKLS0tIG9jd1ZSam5wNlQ1K3ZsWnpEOTRI
-            N3lzaTlLYWJzZGcxOW00VHhDd2d0NUEKuNmnvc0jfrml7qT/NrYLoRL72N2HYOPJ
-            e6jGZCCyg+xW3pY4Q/+g23sqfRfOx1rq9sgcTITKPOfU1GooOldiEw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrdkxLRDN3ZEQ4cngyMWFJ
+            aHJJVzZJcm8yNi9XbWFObHluT2FnSFUxdFE4CmkveEJQeisvSXFKRlNzMlFjMFRC
+            TEZZaGlSakJmNjJRTWsyZnh6ZlZoUXcKLS0tIEdqQkRkK0lNaDNuRGtMZi96MGg1
+            ZXFvTi9wU3pGMGwrWjBYYlZNNThDMGMKGwXs1MA/ANa1l4IlnpPq59Ox8lyYhoHY
+            1niJjcC1NJ/f9hfd7prJN3LmyXMkTFozPn3Hg65DEDrUW6UC21G3yw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-06-16T18:27:34Z"
-    mac: ENC[AES256_GCM,data:R4eB29R4ifshQ73X4JNL6S/w3D9WKnwtGKdXBgzGjCuZxMRXi6tTWlhtD6V7TiRzZ8Hvh6JzZfZhvC5UUOO8YNmPMLsLaxlKSNBK3UKsEYBlaonRCHA8NH5WssZjWaVBK/+3yQypRZ92Xifcay3xpWACsomfF4L1yOAS3a+3qrQ=,iv:2a0r07Tngd2qFkwFMtO9g5NIoay9eWAaC9XDe0QScq0=,tag:iJF67jH2ldJF9QJzzIiwCw==,type:str]
+    lastmodified: "2024-01-16T18:59:59Z"
+    mac: ENC[AES256_GCM,data:+aakKS+NJ3LFsAgBZtDVbTT2DLabVt1TXWqcExgzt01ZVJ99+QcPqWA11yqPWMWBKwDr/97x2KOpQMPzmn6Ex2F3QRYp0I0t+y0/LJHs638LRDqiUFNJnApN9/7wPimD96POZd/LbL3uw1Jmqs4qLQxPERoOD5Z2IZUwGjFKKU4=,iv:nVO8dV6WuTBlM+9cbdgHby+pHFLASFQzQDDqjjby6IQ=,tag:D8KZ174YrLkinegMpX8cSg==,type:str]
     pgp: []
-    encrypted_regex: ^(data|stringData)$
-    version: 3.7.3
+    unencrypted_suffix: _unencrypted
+    version: 3.8.1
