--- a/kubernetes/flux/vars/cluster-settings.yaml
+++ b/kubernetes/flux/vars/cluster-settings.yaml
@@ -5,15 +5,15 @@ metadata:
   name: cluster-settings
   namespace: flux-system
 data:
-  ORGANIZATION: DavisHaus
-  CLUSTER_NAME: jsdyb-k8s-001
-  CLUSTER_APISERVER_ENDPOINT: 10.77.0.10
-  SYNOLOGY_ADDR: 10.77.0.2
+  ORGANIZATION: Pollreisz
+  CLUSTER_NAME: dtmrh-k8s-001
+  CLUSTER_APISERVER_ENDPOINT: 10.27.0.10
+  SYNOLOGY_ADDR: 10.27.0.14
 
-  SVC_NGINX_ADDR: 192.168.77.10
-  SVC_HASS_ADDR: 192.168.77.42
-  SVC_MASS_ADDR: 192.168.77.62
-  SVC_PLEX_ADDR: 192.168.77.79
-  SVC_VPN_ADDR: 192.168.77.77
-  SVC_SMTP_RELAY_ADDR: 192.168.77.25
-  WHITELIST_IP_RANGE: "10.0.0.0/9, 192.168.77.0/24, 172.22.0.0/15"
+  SVC_NGINX_ADDR: 192.168.27.10
+  SVC_HASS_ADDR: 192.168.27.42
+  SVC_MASS_ADDR: 192.168.27.62
+  SVC_PLEX_ADDR: 192.168.27.79
+  SVC_VPN_ADDR: 192.168.27.77
+  SVC_SMTP_RELAY_ADDR: 192.168.27.25
+  WHITELIST_IP_RANGE: "10.0.0.0/9, 192.168.27.0/24, 172.22.0.0/15"
