--- a/kubernetes/apps/system/kustomization.yaml
+++ b/kubernetes/apps/system/kustomization.yaml
@@ -5,4 +5,12 @@ resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
   # Flux-Kustomizations
+  - ./descheduler/ks.yaml
+  # - ./intel-device-plugins/ks.yaml
+  # - ./kured/ks.yaml
   - ./kubelet-csr-approver/ks.yaml
+  - ./node-feature-discovery/ks.yaml
+  - ./reloader/ks.yaml
+  - ./reflector/ks.yaml
+  # - ./system-upgrade-controller/ks.yaml
+
