--- a/kubernetes/apps/network/ingress-nginx/app/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/app/helmrelease.yaml
@@ -83,10 +83,10 @@ spec:
 
       resources:
         requests:
-          memory: 381M
+          memory: 1Gi
           cpu: 100m
         limits:
-          memory: 463M
+          memory: 2Gi
     defaultBackend:
       enabled: true
       image:
