--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -5,13 +5,13 @@ metadata:
     namespace: ENC[AES256_GCM,data:LpcmPx6N6MGz9N8=,iv:8CJ3CxQ87MiiQN9QLTCBihpQoO9iyxOLtNgr7JVgVFg=,tag:2P53FXP5gWb3fDbVmhULrQ==,type:str]
 stringData:
     EMAIL_ADDRESS: ENC[AES256_GCM,data:ujwzu1rhAQWX8lzRfjI1oy1UWA==,iv:WLlXgwUjhn2248X+rC+DL/mxLe1YA9Rg0W/k9OsCH1I=,tag:89VJq33Rx4uxZx1nWoijzA==,type:str]
-    EXTERNAL_DOMAIN: ENC[AES256_GCM,data:nVVyRImhgV8jwXPv,iv:nH5ooFkyCoqt1lAQ3vZs+7/SBdLr/v9F4fPMfs8bgVU=,tag:wM3tPTeukblv5b2QYCWM0w==,type:str]
+    EXTERNAL_DOMAIN: ENC[AES256_GCM,data:UT8AO2wSCqy8Hkr5Bg==,iv:RdZF+p073adVTFtts9QB/QQXdxz9djJUoJy2uaRV5Ks=,tag:WN3mfOmTV08ybF/t42WQ5w==,type:str]
     FULL_NAME: ENC[AES256_GCM,data:OJmB8KJHmyX4esU9HuK8,iv:fyj7en/4iDb2JwqNCi/2+/8cXx9XyuYaT0PUFgRHkkI=,tag:XcL/ip78rtuIQHaCglNBEg==,type:str]
-    INTERNAL_DOMAIN: ENC[AES256_GCM,data:U+i91/ydaPJsGzh4l55Nijwi1oo+,iv:NHjpKpKNQV+db1lF2kOFXoJvDNdLXThZyyyyuN+Ts50=,tag:u/0/vek9Jw5f1Gaa4le6Og==,type:str]
+    INTERNAL_DOMAIN: ENC[AES256_GCM,data:OPqVvw6hZiUdEXMiVa6cws1GcwPscg==,iv:9O/LJTTvhp1QIeBDgfzghqQ6kNucutJyeRCYU//G0Eo=,tag:h7RxOCwzOb7S0Kle4b4+Iw==,type:str]
     SECRET_MAXMIND_ACCOUNT_ID: ""
     SECRET_MAXMIND_LICENSE_KEY: ""
-    SECRET_SENDGRID_APIKEY_SMTP_RELAY: ""
-    SECRET_SENDGRID_USER_SMTP_RELAY: ""
+    SECRET_BREVO_APIKEY_SMTP_RELAY: ENC[AES256_GCM,data:D3mwqTnDyN+l+UQJe7dQh6v9MJX1T7Gw25KKH+SnEoeKRfUCYfe12kYS1XXjkDCGR5AfukhOyYT9K6VjOWRxuMnlfI4dx3z81rtKk8qCYKp15SWAQy5A8iY=,iv:vCY4i5+70zuJ2DBQ7w41ozQRvUOTmFiTJlkWdQNLGYI=,tag:13KgEY9FlnqxTHd3sO1kaA==,type:str]
+    SECRET_BREVO_USER_SMTP_RELAY: ENC[AES256_GCM,data:QrHR3wfGNAY=,iv:fbzmtzMRPLAALl/co877XuPJiAcGu4KLgIIOW74OwIQ=,tag:yDcM6lT+oDcJISBqU4vf2A==,type:str]
 sops:
     kms: []
     gcp_kms:
@@ -30,8 +30,8 @@ sops:
             ZXFvTi9wU3pGMGwrWjBYYlZNNThDMGMKGwXs1MA/ANa1l4IlnpPq59Ox8lyYhoHY
             1niJjcC1NJ/f9hfd7prJN3LmyXMkTFozPn3Hg65DEDrUW6UC21G3yw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-01-16T18:59:59Z"
-    mac: ENC[AES256_GCM,data:+aakKS+NJ3LFsAgBZtDVbTT2DLabVt1TXWqcExgzt01ZVJ99+QcPqWA11yqPWMWBKwDr/97x2KOpQMPzmn6Ex2F3QRYp0I0t+y0/LJHs638LRDqiUFNJnApN9/7wPimD96POZd/LbL3uw1Jmqs4qLQxPERoOD5Z2IZUwGjFKKU4=,iv:nVO8dV6WuTBlM+9cbdgHby+pHFLASFQzQDDqjjby6IQ=,tag:D8KZ174YrLkinegMpX8cSg==,type:str]
+    lastmodified: "2024-01-22T23:10:14Z"
+    mac: ENC[AES256_GCM,data:PJJeUCWutZkQ20bd2EgL+SkPU/rHpVZOZ6D1++QC/W7F5EGkYyekBocZW0jZ5Q8ypSQ/yKkI6G7/j0tqpzL5nhLc3JamAY/5XfkI2RzbJ8WORJrgZ3i5HjYY4ZaY8ldTl3nYQkXOgY/nv2T0WIb/BnVwoZ+BkTdX/GL2C8PqxLY=,iv:lOn9OFYOmpkGRpZpmUHMGj8W1QGgYxuvKJLvA80K2D0=,tag:LUWiDh06flJdeH8joatsoA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
