--- a/kubernetes/apps/network/ingress-nginx/external/helmrelease.yaml
+++ b/kubernetes/apps/network/ingress-nginx/external/helmrelease.yaml
@@ -1,14 +1,12 @@
-
+---
 apiVersion: helm.toolkit.fluxcd.io/v2beta2
 kind: HelmRelease
 metadata:
-  name: ingress-nginx
-  namespace: nginx
+  name: nginx-external
 spec:
   interval: 30m
   chart:
     spec:
-      # renovate: registryUrl=https://kubernetes.github.io/ingress-nginx
       chart: ingress-nginx
       version: 4.9.0
       sourceRef:
@@ -17,20 +15,51 @@ spec:
         namespace: flux-system
       interval: 30m
   values:
-    controller:
-      allowSnippetAnnotations: true
+    fullnameOverride: nginx-external
 
+    controller:
       replicaCount: 3
 
       updateStrategy:
         type: RollingUpdate
 
+      allowSnippetAnnotations: true
+      enableAnnotationValidations: true
+
+      service:
+        enabled: true
+        type: LoadBalancer
+        annotations:
+          external-dns.alpha.kubernetes.io/hostname: "ingress-ext.${EXTERNAL_DOMAIN}"
+          io.cilium/lb-ipam-ips: "${SVC_NGINX_EXTERNAL_ADDR}"
+        externalTrafficPolicy: Cluster
+
+      publishService:
+        enabled: true
+
+      ingressClassResource:
+        name: nginx-external
+        default: false
+        controllerValue: k8s.io/ingress-nginx-external
+
+      admissionWebhooks:
+        objectSelector:
+          matchExpressions:
+            - key: ingress-class
+              operator: In
+              values:
+                - nginx-external
+
       config:
+        block-user-agents: "GPTBot,~*GPTBot*,ChatGPT-User,~*ChatGPT-User*,Google-Extended,~*Google-Extended*,CCBot,~*CCBot*,Omgilibot,~*Omgilibot*,FacebookBot,~*FacebookBot*" # taken from https://github.com/superseriousbusiness/gotosocial/blob/main/internal/web/robots.go
+        client-header-timeout: 120
         client-body-buffer-size: "100M"
         client-body-timeout: 120
-        client-header-timeout: 120
+        custom-http-errors: 404,401,403,500,503
         enable-brotli: "true"
+        enable-ocsp: "true"
         enable-real-ip: "true"
+        hide-headers: Server,X-Powered-By
         hsts-max-age: "31449600"
         keep-alive: 120
         keep-alive-requests: 10000
@@ -46,23 +75,7 @@ spec:
         proxy-body-size: 0
         proxy-buffer-size: "16k"
         ssl-protocols: "TLSv1.3 TLSv1.2"
-        custom-http-errors: 404,401,403,500,503
-        # use-geoip2: true
-
-      service:
-        enabled: true
-        type: LoadBalancer
-        annotations:
-          io.cilium/lb-ipam-ips: ${SVC_NGINX_ADDR}
-        externalTrafficPolicy: Cluster
-
-      publishService:
-        enabled: true
-
-      ingressClassResource:
-        default: true
-
-      # maxmindLicenseKey: ${SECRET_MAXMIND_LICENSE_KEY}
+        use-forwarded-headers: "true"
 
       metrics:
         enabled: true
@@ -72,21 +85,25 @@ spec:
           namespaceSelector:
             any: true
 
+      extraArgs:
+        default-ssl-certificate: "network/${SANITIZED_ORGANIZATION}-tls-external"
+
       topologySpreadConstraints:
         - maxSkew: 2
           topologyKey: kubernetes.io/hostname
           whenUnsatisfiable: DoNotSchedule
           labelSelector:
             matchLabels:
-              app.kubernetes.io/instance: ingress-nginx
+              app.kubernetes.io/instance: nginx-external
               app.kubernetes.io/component: controller
 
       resources:
         requests:
-          memory: 1Gi
-          cpu: 100m
+          cpu: 99m
+          memory: 768Mi
         limits:
-          memory: 2Gi
+          memory: 768Mi
+
     defaultBackend:
       enabled: true
       image:
