--- a/kubernetes/flux/vars/cluster-secrets.sops.yaml
+++ b/kubernetes/flux/vars/cluster-secrets.sops.yaml
@@ -12,6 +12,8 @@ stringData:
     SECRET_MAXMIND_LICENSE_KEY: ""
     SECRET_BREVO_APIKEY_SMTP_RELAY: ENC[AES256_GCM,data:D3mwqTnDyN+l+UQJe7dQh6v9MJX1T7Gw25KKH+SnEoeKRfUCYfe12kYS1XXjkDCGR5AfukhOyYT9K6VjOWRxuMnlfI4dx3z81rtKk8qCYKp15SWAQy5A8iY=,iv:vCY4i5+70zuJ2DBQ7w41ozQRvUOTmFiTJlkWdQNLGYI=,tag:13KgEY9FlnqxTHd3sO1kaA==,type:str]
     SECRET_BREVO_USER_SMTP_RELAY: ENC[AES256_GCM,data:QrHR3wfGNAY=,iv:fbzmtzMRPLAALl/co877XuPJiAcGu4KLgIIOW74OwIQ=,tag:yDcM6lT+oDcJISBqU4vf2A==,type:str]
+    ORGANIZATION: ENC[AES256_GCM,data:hNKMB5eOXZex,iv:Bqas8uAxi7foiwBuVn4lrC6DqAMWJdZK2kdLkRFkdAs=,tag:deQfF9++Ye7m0kFV0LmHNg==,type:str]
+    SANITIZED_ORGANIZATION: ENC[AES256_GCM,data:GH2faOmAhbeH,iv:DZr9m4YeOFtwI88ynWGgZMxp7uufZXGb+1elgvWs1G8=,tag:vdy+tTya+/pd37uUcL/9YQ==,type:str]
 sops:
     kms: []
     gcp_kms:
@@ -30,8 +32,8 @@ sops:
             ZXFvTi9wU3pGMGwrWjBYYlZNNThDMGMKGwXs1MA/ANa1l4IlnpPq59Ox8lyYhoHY
             1niJjcC1NJ/f9hfd7prJN3LmyXMkTFozPn3Hg65DEDrUW6UC21G3yw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-01-22T23:10:14Z"
-    mac: ENC[AES256_GCM,data:PJJeUCWutZkQ20bd2EgL+SkPU/rHpVZOZ6D1++QC/W7F5EGkYyekBocZW0jZ5Q8ypSQ/yKkI6G7/j0tqpzL5nhLc3JamAY/5XfkI2RzbJ8WORJrgZ3i5HjYY4ZaY8ldTl3nYQkXOgY/nv2T0WIb/BnVwoZ+BkTdX/GL2C8PqxLY=,iv:lOn9OFYOmpkGRpZpmUHMGj8W1QGgYxuvKJLvA80K2D0=,tag:LUWiDh06flJdeH8joatsoA==,type:str]
+    lastmodified: "2024-01-22T23:44:12Z"
+    mac: ENC[AES256_GCM,data:EJhVaJKqaKX0lQylnRVhxTuCIEt9dPchbrfPCsuKzdGYgvpkzgh3JgTlDrjOS8jFE9Zxr+Gal33fCAboA02QYQ55N6xqDauvRF4VRWOi9AqVRrgKZLx1m3Q4VhxeUo1aBZbDWfXnAcFP7J9wwkn0nCv/KLvamETkGNF0hg4Ru0s=,iv:vdlyyVvKEns+FdU9kEgzN2wfqgo+0lpYS8ERqH0FC30=,tag:Y7Y2ThQZ+QWuqOw7Ihtr5A==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.8.1
