--- a/kubernetes/flux/vars/cluster-settings.yaml
+++ b/kubernetes/flux/vars/cluster-settings.yaml
@@ -10,7 +10,8 @@ data:
   CLUSTER_APISERVER_ENDPOINT: 10.27.0.10
   SYNOLOGY_ADDR: 10.27.0.14
 
-  SVC_NGINX_ADDR: 192.168.27.10
+  SVC_NGINX_INTERNAL_ADDR: 192.168.27.10
+  SVC_NGINX_EXTERNAL_ADDR: 192.168.27.20
   SVC_HASS_ADDR: 192.168.27.42
   SVC_MASS_ADDR: 192.168.27.62
   SVC_PLEX_ADDR: 192.168.27.79
