--- a/kubernetes/apps/security/cert-manager/app/helmrelease.yaml
+++ b/kubernetes/apps/security/cert-manager/app/helmrelease.yaml
@@ -25,10 +25,13 @@ spec:
     webhook:
       enabled: true
     extraArgs:
-      # - --dns01-recursive-nameservers=1.1.1.1:53,9.9.9.9:53
+       # - --dns01-recursive-nameservers=1.1.1.1:53,9.9.9.9:53
     # - --dns01-recursive-nameservers-only
       # - --enable-certificate-owner-ref
     replicaCount: 1
+    dns01RecursiveNameservers: "1.1.1.1:53,9.9.9.9:53"
+    dns01RecursiveNameserversOnly: true
+    clusterResourceNamespace: security
 
     # podDnsPolicy: "None"
     # podDnsConfig:
