fix to nginx-external
Signed-off-by: David Pollreisz <pollreisz@gmail.com>

--- a/kubernetes/apps/storage/rook-ceph/cluster/helmrelease.yaml
+++ b/kubernetes/apps/storage/rook-ceph/cluster/helmrelease.yaml
@@ -107,7 +107,7 @@ spec:
               - name: "/dev/sda"
 
     ingress:
-      ingressClassName: "nginx"
+      ingressClassName: nginx-external
       dashboard:
         annotations:
           cert-manager.io/cluster-issuer: letsencrypt-prod
