fix(smtp-relay): update smtp username
Signed-off-by: David Pollreisz <pollreisz@gmail.com>

--- a/kubernetes/apps/network/smtp-relay/app/helmrelease.yaml
+++ b/kubernetes/apps/network/smtp-relay/app/helmrelease.yaml
@@ -27,7 +27,7 @@ spec:
       DEBUG: "true"
       SMTP_SERVER: smtp-relay.brevo.com
       # OVERWRITE_FROM: "${SECRET_SENDGRID_USER_SMTP_RELAY}"
-      SMTP_USERNAME: ${EMAIL}
+      SMTP_USERNAME: ${EMAIL_ADDRESS}
       SMTP_PASSWORD: "${SECRET_BREVO_APIKEY_SMTP_RELAY}"
       SMTP_DOMAIN: "${EXTERNAL_DOMAIN}"
       SMTP_PORT: "465"
