--- a/kubernetes/apps/media/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/media/plex/app/helmrelease.yaml
@@ -26,7 +26,7 @@ spec:
       tag: 1.32.6.7557-1cf77d501
 
     env:
-      TZ: "America/New_York"
+      TZ: "America/Denver"
       ALLOWED_NETWORKS: "10.0.0.0/8"
 
     envFrom:
@@ -179,11 +179,11 @@ spec:
 
     resources:
       requests:
-        gpu.intel.com/i915: 1
+        # gpu.intel.com/i915: 1
         cpu: 500m
         memory: 2Gi
       limits:
-        gpu.intel.com/i915: 1
+        # gpu.intel.com/i915: 1
         memory: 10Gi
 
     volumeClaimTemplates:
