--- a/kubernetes/apps/media/kustomization.yaml
+++ b/kubernetes/apps/media/kustomization.yaml
@@ -5,13 +5,13 @@ resources:
   # Pre Flux-Kustomizations
   - ./namespace.yaml
   # # Flux-Kustomizations
-  # - ./common/ks.yaml
+  - ./common/ks.yaml
   # - ./bazarr/ks.yaml
   # - ./lidarr/ks.yaml
   # - ./music-assistant/ks.yaml
   # - ./overseerr/ks.yaml
-  # - ./plex/ks.yaml
-  # - ./plex-meta-manager/ks.yaml
+  - ./plex/ks.yaml
+  - ./plex-meta-manager/ks.yaml
   # - ./readarr/ks.yaml
   # - ./recyclarr/ks.yaml
   # - ./radarr/ks.yaml
