fixup! fix: update plex claim code
Signed-off-by: David Pollreisz <pollreisz@gmail.com>

--- a/kubernetes/apps/media/plex/app/helmrelease.yaml
+++ b/kubernetes/apps/media/plex/app/helmrelease.yaml
@@ -163,8 +163,8 @@ spec:
         mountPath: /config/Backups
         readOnly: false
 
-    nodeSelector:
-      intel.feature.node.kubernetes.io/gpu: "true"
+    # nodeSelector:
+      # intel.feature.node.kubernetes.io/gpu: "true"
 
     serviceMonitor:
       monitor:
