add: turn on grafana-authentik-thanos
Signed-off-by: David Pollreisz <pollreisz@gmail.com>

--- a/kubernetes/apps/monitor/grafana/app/secret-grafana.sops.yaml
+++ b/kubernetes/apps/monitor/grafana/app/secret-grafana.sops.yaml
@@ -8,32 +8,32 @@ metadata:
         reflector.v1.k8s.emberstack.com/reflection-auto-enabled: "true"
         reflector.v1.k8s.emberstack.com/reflection-auto-namespaces: flux-system
 stringData:
-    GF_AUTH_GENERIC_OAUTH_API_URL: ENC[AES256_GCM,data:vRF1wrUcLMFfTYlX0noRF+upGl9ynYI48qMbkO+EVFaaN5bvB5n0Rl0VQwhBP5HsaME=,iv:c9gwoGV2LVQuA+YV46XRfzQ132fkKGxXeWsK73Wpxfk=,tag:DdvBMpdgWvnbSNZlVIBnSQ==,type:str]
-    GF_AUTH_GENERIC_OAUTH_AUTH_URL: ENC[AES256_GCM,data:oQ54X/6b5ieoJm4qCuMzNZyS37tooiBzSabVoui9MsJQvHfke/OpgJyykADw0buKyWUa,iv:PbW34vdWNJ1uC6uVT4lafksj2+wZlnJ/CaTFDal7WPM=,tag:F1L+Z/7wNKY62GZkFiw3ug==,type:str]
-    GF_AUTH_GENERIC_OAUTH_CLIENT_ID: ENC[AES256_GCM,data:2VSgNyCB8Q==,iv:vnpvOJTVUv/SPJ/NzVvB5eFT15MUJvKW7hOhrK59WBo=,tag:GvkvqoGC94WOx5EPki2G7A==,type:str]
-    GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:xrkhVIX/dIHgFGMmIQJop7XCayLVImaEMjVhqY8mP0mFrm0hW+zVEbelKIfZ6yhyM43b2yW0QCdm1z4FtQTrBmVxMCBbFkXYf5xBLc7XrjW25/KEqWI0vrccS2JLRXUAilit71gImN0aOosAuc47uSH62pnxCmGvYfUMG3Wy2fM=,iv:nOgl3+CP5nI2mYtfJcuaOECZXIDf5Alg3664yhEQAhc=,tag:wYfZ6j/0L2hAv5NE9FBDIQ==,type:str]
-    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: ENC[AES256_GCM,data:oELg3cHTNZ3UJQrWr2TJd2ohb0olrF3FeYWoik6IWXlerIh7X6VZFYhEAOB/MGA=,iv:zw+WU+24vQZaiWIJxduubnZz67r6v8AGY5Jk4iqVetk=,tag:kSZvVyYlHiHCxjGY0E6Drg==,type:str]
-    GF_AUTH_SIGNOUT_REDIRECT_URL: ENC[AES256_GCM,data:DHjtS/77mM/y16HROCqXgRpgYF+V5LBXH8joLBAY/v8k/WANHS2gygbxheAk6GSATd5XwTrkV0i0swdwPw==,iv:5YAalJUINsFlhhkX3rW926QGxGfR6ke1ozvYmzgqt50=,tag:XX0K1OI3dzsBKXqmSu4EWg==,type:str]
+    GF_AUTH_GENERIC_OAUTH_API_URL: ENC[AES256_GCM,data:GDhEcwXTMHgicVX4nY60jE0zXHmi0mI17l66nDEVSPedM9FH3wknKDTNE018xM4qFXY=,iv:+Jea+thWLUaOMDTvQPXbW+51AGwEbKbXInX/tIFsVNc=,tag:IW6ATOEGs4WZw3ROqof5Mg==,type:str]
+    GF_AUTH_GENERIC_OAUTH_AUTH_URL: ENC[AES256_GCM,data:kHU/aIvEjL0bIfCzKdZ6/zYcSOlbzseVWFw1FHTh4hzp8S1jH4sfDvjsjzFvcsJkFXFl,iv:jxYJUvdOm8RQ+2vP6icIbWGSCaN2rH/VjsxHJxeRSoY=,tag:FX6iSNy3YSWMmGptbRoeFw==,type:str]
+    GF_AUTH_GENERIC_OAUTH_CLIENT_ID: ENC[AES256_GCM,data:RnTsJuBo9Q==,iv:y+1hks3QAtboYjqbmGcYi5R6E4rTxldPuNxKPd9A99A=,tag:4oQaxYpkI6sVh0/6q3vzYg==,type:str]
+    GF_AUTH_GENERIC_OAUTH_CLIENT_SECRET: ENC[AES256_GCM,data:7nl4zfKPZWVqGNrBgVpb503+u9zzFsVUpmrEHbuHjvxQVdIH2SexThkY/foPvC7K8EokYPI=,iv:GAAT1hkAFHvTCOfbm7LMvP0CJn4BhONebyNl3WtDLRw=,tag:ltBLk8BpnnQoo2+zEOgP7w==,type:str]
+    GF_AUTH_GENERIC_OAUTH_TOKEN_URL: ENC[AES256_GCM,data:3Ok0OaWeEdRc9nVvwjuiv3GCObZGRmI6sSMAcdrFs2QYcBwV613/bH492kZRGSA=,iv:7EApNBWR03ooUkWE2djdLlz5KG4Ns5X6BRsopzrsjoo=,tag:QwPR6NLWG+cpPeDOw5xPSw==,type:str]
+    GF_AUTH_SIGNOUT_REDIRECT_URL: ENC[AES256_GCM,data:lae2awuILTktIC1EBVV3az7p0FA6/9BZoGPLwpwTkgy3alwbK0leFnCpBPmCPoEq2OVaSQgZ/WRTRe+Eag==,iv:aAJ1CzvHU5UeR+y+4vOsCQfuJW8VPahpH9795CUMM0w=,tag:iCzvdHCAWOP2fSip1m1Jxg==,type:str]
 sops:
     kms: []
     gcp_kms:
-        - resource_id: projects/moonlit-watch-362206/locations/global/keyRings/davishaus-keyring/cryptoKeys/sops
-          created_at: "2023-05-28T04:13:03Z"
-          enc: CiQA3rJLN9cYUsDFexClARZCTVMjVDIrb2TImSurF8jgwEOjLLcSSQDC/xGZvFPa/TJ2pjlrBbd/uK66m/86LZSm2TDwmCsenYKmZ8X2xOYzYA/jW6xKAstb0Kr9bmmwIpmH7lZbBsfpQ/Jo0m2c0HM=
+        - resource_id: projects/homelab-411417/locations/global/keyRings/pollreisz-keyring/cryptoKeys/sops
+          created_at: "2024-01-25T22:17:41Z"
+          enc: CiQAFbK3LHOkxRYtJU1Y6fQTVDCTVeZdVzg/OeLee1Yr4k5GM6ASSQAN+xHZxG0k3feszTSqIlHF+g12a3d6UyYdronbYAyABaHVm7XVU4DmTWHnPWA6+8vWTLEkn+SCN0Mw2cLm/PSvTv3C5xCakHc=
     azure_kv: []
     hc_vault: []
     age:
-        - recipient: age1jhlwc2kz4rm95t7hfvrj0mhdg7fwmepj90ap5y26ypxf808xmv8qmhnla5
+        - recipient: age1ujgpmesszpu8z62w5yfg56srzfjd5v9h2n447yslv5njvqdpjuys9zgsv0
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYd0YwQ3BWY0N1NmdKVC9m
-            M2FXUklkZitxUjlMVFRBNXdqY0xXODVudVUwClhadzUzVGgrVEVmaXZCcWxGT21p
-            U0VRNnR6aWdOTDVPRFBjcHI4NEtLc0UKLS0tIGU0Y01FNVBSN0FHNFpjMStpcnRm
-            UW53aUk2NXdrSFFQdFYzK05UN1RMcUUKqL7QtjFC3jqv+nxfwc4LQCOqcqMfGfkC
-            xpdqcpyRGcQ3Pm79XPOOCCGPnDpPZRMxSoHx4bdpCmCTmxIAGF+rLA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNZ3RVT3NBYlFGeFVnSDR6
+            dnUyNVNmMDJRb0hQUkVaWUdOeVVQdjc3WG1JCkFPWWtMdVhpMW5XWkxEMlBURE1G
+            aVVJZTZ6NGFvYy9nbEVHQXBBa1BDbHcKLS0tIGxjRTlnOHZrTDdBK2FldjE3NHcv
+            WkNicFQrQWR3UEk1YnFyNUJDK2dJUnMKOvQNOgW7QzkZ6HDFO85/pVNTyOowcCeB
+            bBX4QWLCfE0b3EomjCai/Yw9lKEbkjaL83sTRA6Hz4/UGGrKmaMFhg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2023-06-14T15:25:01Z"
-    mac: ENC[AES256_GCM,data:Fzj7NEY2Ly++fTUw6Q9iOz1168QkuTZdEKb3O8iW/Tr2e1zFmDnG0bCrHEClRBg90X9BgkvIntMNJWUTXmX5OddMRk5lbff8oA4IIkmHa6ZZNr2mTFmP67RczKAg85LwZQFKRAZpiwgkPckoPJD272NHEx+SDctWE11ss8QhlNU=,iv:hlP+0otHO6aD/abJxgL2D6Ngs9T9BHu3PEC5W2bGwGg=,tag:Wkxdkcfdoxu9bhjPP6Q6gA==,type:str]
+    lastmodified: "2024-01-25T22:17:42Z"
+    mac: ENC[AES256_GCM,data:V2GfKrj/lV4VPTyUvX/l4DKSmadOVUOz7/KX8DoHf+T+Pf3dQB7ZrFG9b+tt9TJDOPR6qCPEsUWN8eX9wwYqK3u18sXVuFWRj0ycxFg/aTY5HhrUB706XpyFGb0xVEXPUwrNiOE9QMhFXFthEDlS5EnHDYSrkNFqN5ITrmNXlus=,iv:u8jZ12TLn4bTv2ljeiT10hdbojGE7juCIwGFdfaVs7Q=,tag:G3D5qakzmRjKWO5u0JGH/A==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
-    version: 3.7.3
+    version: 3.8.1
