--- a/kubernetes/apps/security/authentik/provision/tf.yaml
+++ b/kubernetes/apps/security/authentik/provision/tf.yaml
@@ -132,11 +132,9 @@ spec:
           parent: "${ORGANIZATION}-Admins"
     - name: users
       value:
-        jefedavis:
+        pollreid:
           name: "${FULL_NAME}"
           email: "${EMAIL_ADDRESS}"
           groups:
             - "${ORGANIZATION}-Admins"
             - "Grafana-Admins"
-
-
