--- a/kubernetes/apps/system/system-upgrade-controller/plans/talos.yaml
+++ b/kubernetes/apps/system/system-upgrade-controller/plans/talos.yaml
@@ -26,6 +26,14 @@ spec:
         valueFrom:
           fieldRef:
             fieldPath: status.hostIP
+      - name: SCHEMATIC_PREFIX
+        valueFrom:
+          fieldRef:
+            fieldPath: metadata.labels['factory.talos.dev/schematic-prefix']
+      - name: SCHEMATIC_SUFFIX
+        valueFrom:
+          fieldRef:
+            fieldPath: metadata.labels['factory.talos.dev/schematic-suffix']
     args:
       - --nodes=$(NODE_IP)
       - health
@@ -35,6 +43,6 @@ spec:
     args:
       - --nodes=$(NODE_IP)
       - upgrade
-      - --image=factory.talos.dev/installer/32b8c8618884d2a591957795c874dd2284e420a8c09d94e45e8d423182c58def:$(SYSTEM_UPGRADE_PLAN_LATEST_VERSION)
+      - --image=factory.talos.dev/installer/$(SCHEMATIC_PREFIX)$(SCHEMATIC_SUFFIX):$(SYSTEM_UPGRADE_PLAN_LATEST_VERSION)
       - --preserve=true
       - --wait=false
