--- a/kubernetes/apps/system/system-upgrade-controller/plans/talos.yaml
+++ b/kubernetes/apps/system/system-upgrade-controller/plans/talos.yaml
@@ -4,7 +4,7 @@ kind: Plan
 metadata:
   name: talos
 spec:
-  # renovate: datasource=docker depName=ghcr.io/buroa/installer
+  # renovate: depName=ghcr.io/siderolabs/installer datasource=docker extractVersion=^(?<version>.*)$
   version: v1.6.2
   serviceAccountName: system-upgrade
   secrets:
