--- a/infrastructure/talos/talconfig.yaml
+++ b/infrastructure/talos/talconfig.yaml
@@ -32,7 +32,7 @@ nodes:
   - hostname: dtmrh-u-dr420-n1.${INTERNAL_DOMAIN}
     controlPlane: true
     ipAddress: 10.27.0.11
-    installDisk: /dev/sdb
+    installDisk: /dev/sdc
     disableSearchDomain: true
     networkInterfaces:
       - interface: bond0
@@ -53,18 +53,31 @@ nodes:
           - net.ifnames=0
         systemExtensions:
           officialExtensions:
-            - siderolabs/nvidia-container-toolkit
-            - siderolabs/nvidia-fabricmanager
-            - siderolabs/nvidia-open-gpu-kernel-modules
             - siderolabs/intel-ucode
             - siderolabs/iscsi-tools
-      
+            - siderolabs/nvidia-container-toolkit
+            - siderolabs/nonfree-kmod-nvidia
+    patches:
+      - |-
+        - op: add
+          path: /machine/kernel
+          value:
+            modules:
+              - name: nvidia
+              - name: nvidia_uvm
+              - name: nvidia_drm
+              - name: nvidia_modeset
+      - |-
+        - op: add
+          path: /machine/sysctls
+          value:
+            net.core.bpf_jit_harden: 1
     nodeLabels: 
       topology.kubernetes.io/region: dtmrh
       topology.kubernetes.io/zone: dtmrh-u
       #Needed due to Labels only allowing 63 Characters
-      factory.talos.dev/schematic-prefix: f7ff639cafb8be7988f535607594b4a1
-      factory.talos.dev/schematic-suffix: 3026114075cce95cce460a1324ed8184
+      factory.talos.dev/schematic-prefix: 220e955db777255fbc0b4ce1123ce23a
+      factory.talos.dev/schematic-suffix: d5344e64d06b07213faa340f4ff0e533
 
   # Dell R420 / Xeon E5-2470 / 144GB / 250GB SSD / 3TB SATA
   - hostname: dtmrh-u-dr420-n2.${INTERNAL_DOMAIN}
@@ -89,8 +102,8 @@ nodes:
       topology.kubernetes.io/region: dtmrh
       topology.kubernetes.io/zone: dtmrh-u
       #Needed due to Labels only allowing 63 Characters
-      factory.talos.dev/schematic-prefix: f7ff639cafb8be7988f535607594b4a1
-      factory.talos.dev/schematic-suffix: 3026114075cce95cce460a1324ed8184
+      factory.talos.dev/schematic-prefix: 90e40e4089e3f67dc09583f5ee5b824d
+      factory.talos.dev/schematic-suffix: 00b9eadf5d05562a78a9cc5ff15bf7f1
 
   # Dell R420 / Xeon E5-2470 / 160GB / 250GB SSD / 3TB SATA
   - hostname: dtmrh-u-dr420-n3.${INTERNAL_DOMAIN}
@@ -115,8 +128,8 @@ nodes:
       topology.kubernetes.io/region: dtmrh
       topology.kubernetes.io/zone: dtmrh-u
       #Needed due to Labels only allowing 63 Characters
-      factory.talos.dev/schematic-prefix: 082ff64bad4c1e7745cf2529dced6102
-      factory.talos.dev/schematic-suffix: b4f1691df0d787c78aa00f976f5ef172
+      factory.talos.dev/schematic-prefix: 90e40e4089e3f67dc09583f5ee5b824d
+      factory.talos.dev/schematic-suffix: 00b9eadf5d05562a78a9cc5ff15bf7f1
 
 controlPlane:
   schematic:
