fix: ingress for minio and unifi
Signed-off-by: David Pollreisz <pollreisz@gmail.com>

--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -10,3 +10,5 @@ resources:
   - ./smtp-relay/ks.yaml
   - ./external-dns/ks.yaml
   - ./dynamic-dns/ks.yaml
+  # Standard Resources
+  - ./external-services
