--- a/kubernetes/apps/monitor/thanos/app/secret-thanos.sops.yaml
+++ b/kubernetes/apps/monitor/thanos/app/secret-thanos.sops.yaml
@@ -4,12 +4,27 @@ metadata:
     name: thanos-secret
     namespace: monitor
 stringData:
-    objstore.yml: |
-      type: S3
-      config:
-        insecure: true
-        bucket: thanos
-        endpoint: minio.internal.pollreisz.dev:9000
-        region: us-east-1
-        access_key: Nd1p5DPz4LS2Kd5yHCNw
-        secret_key: Aeh66vy3oSc6LZqCBBk3akg0uiX66D7lkW7FpejA
+    objstore.yml: ENC[AES256_GCM,data:+tOTCIO0rJiLWKNzjlshju5tZauk34QxHPqDqB/HGga3uq6RQSm9xC/cULR6Qqudr0RXX6YSEOeJZu8FMASEfBGgWPtIRRU9fqVoiLumvWcVmdUv+mbARgUglPEdXN3be2uLGqb6RmC5PY+HIuHc7NskGkw3UWGFNSJrXnmA7xpurb9ACLSlo/dcpBvxzeVE4zY7pDhecu3ldTNHLtssl4POpIdA/klXaXuFjpAhc8XR1pntbejhL3YwXNOYpumVszqLBwqYtdTGG0hcSac5FWeg,iv:ZCxDVyMe+v/rvuAvLdPJdNa02Kw3aN5ik/StwtlxSp4=,tag:sOspk/xSTomvN8WqLqX3fA==,type:str]
+sops:
+    kms: []
+    gcp_kms:
+        - resource_id: projects/homelab-411417/locations/global/keyRings/pollreisz-keyring/cryptoKeys/sops
+          created_at: "2024-01-31T21:02:00Z"
+          enc: CiQAFbK3LMPw9ZXmdbDm+SnZy5nyt5wF0gXFYVS/z+LBMsRa2zgSSQAN+xHZjbPboHufmnjg2WHKzIJlEMGigXbvlRgijdp0qoSMp4TGyRvz4NV5IlFt5MtIxjhRwuN2y2m+OSBq6GhoRhSzMNIeb+E=
+    azure_kv: []
+    hc_vault: []
+    age:
+        - recipient: age1ujgpmesszpu8z62w5yfg56srzfjd5v9h2n447yslv5njvqdpjuys9zgsv0
+          enc: |
+            -----BEGIN AGE ENCRYPTED FILE-----
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBnbGJJbUErdnhhbGRGdWdk
+            ZEdLUjltWUE1WnphZEJSdXdvMm9oQXpuV1VzClptanVoZWQ2V3JyL052ekxUNGpV
+            eXJ4TkZGZVpvRGgvZXQyMXk1V3o0WmcKLS0tIDliSUhzVlBFZDk5MEJsQ0ZaM0FI
+            WDZhd2V2dy9wcTRSaXVGSU5qeG1Eb1EKEZ9JzowiiLJX6GMnycixLG/OANChTAJB
+            +eEeA881ynJIGSAgWyS4AH9XPVNm9j3uboLbSMLO+CNtgTXteM+zGw==
+            -----END AGE ENCRYPTED FILE-----
+    lastmodified: "2024-01-31T21:02:00Z"
+    mac: ENC[AES256_GCM,data:cpwJ/XV+QZCIimASKT+5TCKRRvISGSVWYp4YKVUXkHnsyyXnYfRB1KWpqXZSpSq2S7puWTPQp5Kvzdzxf9yw83gEPyr8Y7QLopKeSvHfdBC6djIgDe/m+UuQaY5ysv4AMgTcU0cnkksKr+bRz8gYjlVVYAzk/TrPE4/YOUJMFZo=,iv:rjeVbnpq0An9zZAvDuhxp+7KH7GU4khdNZvkAmzmitw=,tag:V++e3bzs/jaDzN6ZN7bcXw==,type:str]
+    pgp: []
+    encrypted_regex: ^(data|stringData)$
+    version: 3.8.1
