--- a/kubernetes/flux/repositories/helm/kustomization.yaml
+++ b/kubernetes/flux/repositories/helm/kustomization.yaml
@@ -28,6 +28,7 @@ resources:
   - kubernetes-sigs-nfs-subdir.yaml
   - kyverno.yaml
   - metallb.yaml
+  - nvidia.yaml
   - piraeus.yaml
   - postfinance.yaml
   - prometheus-community.yaml
