--- a/kubernetes/apps/system/kustomization.yaml
+++ b/kubernetes/apps/system/kustomization.yaml
@@ -6,7 +6,7 @@ resources:
   - ./namespace.yaml
   # Flux-Kustomizations
   - ./descheduler/ks.yaml
-  # - ./intel-device-plugins/ks.yaml
+  - ./nvidia-device-plugin/ks.yaml
   # - ./kured/ks.yaml
   - ./kubelet-csr-approver/ks.yaml
   - ./node-feature-discovery/ks.yaml
