--- a/kubernetes/apps/datastore/cloudnative-pg/app/helmrelease.yaml
+++ b/kubernetes/apps/datastore/cloudnative-pg/app/helmrelease.yaml
@@ -32,3 +32,7 @@ spec:
         INHERITED_ANNOTATIONS: kyverno.io/ignore
     monitoring:
       podMonitorEnabled: true
+      grafanaDashboard:
+        create: true
+        sidcarName: grafana.io/dashbaord
+        sidcarLabelValue: "true"
