fix: updated for unifi address
Signed-off-by: David Pollreisz <pollreisz@gmail.com>

--- a/kubernetes/apps/network/external-services/unifi.yaml
+++ b/kubernetes/apps/network/external-services/unifi.yaml
@@ -9,7 +9,7 @@ metadata:
     app.kubernetes.io/name: unifi
 subsets: 
   - addresses: 
-      - ip: ${SYNOLOGY_ADDR}
+      - ip: ${UNIFI_ADDR}
     ports: 
       - name: http
         port: 443
