--- a/kubernetes/flux/vars/cluster-settings.yaml
+++ b/kubernetes/flux/vars/cluster-settings.yaml
@@ -9,6 +9,7 @@ data:
   CLUSTER_NAME: dtmrh-k8s-001
   CLUSTER_APISERVER_ENDPOINT: 10.27.0.10
   SYNOLOGY_ADDR: 10.27.0.14
+  UNIFI_ADDR: 10.0.1.1
 
   SVC_NGINX_INTERNAL_ADDR: 192.168.27.20
   SVC_NGINX_EXTERNAL_ADDR: 192.168.27.10
