--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -7,14 +7,14 @@ resources:
   - ./namespace.yaml
   # Flux-Kustomizations
   - ./cilium/ks.yaml
-  - ./blocky/ks.yaml
+  # - ./blocky/ks.yaml
   - ./dynamic-dns/ks.yaml
   - ./external-dns/ks.yaml
   - ./ingress-nginx/ks.yaml
   - ./pod-gateway/ks.yaml
   - ./smtp-relay/ks.yaml
-  - ./tetragon/ks.yaml
-  - ./multus/ks.yaml
+  # - ./tetragon/ks.yaml
+  # - ./multus/ks.yaml
   # # Standard Resources
   - ./external-services
 
