--- a/kubernetes/apps/network/kustomization.yaml
+++ b/kubernetes/apps/network/kustomization.yaml
@@ -11,7 +11,7 @@ resources:
   - ./dynamic-dns/ks.yaml
   - ./external-dns/ks.yaml
   - ./ingress-nginx/ks.yaml
-  - ./pod-gateway/ks.yaml
+  # - ./pod-gateway/ks.yaml
   - ./smtp-relay/ks.yaml
   # - ./tetragon/ks.yaml
   # - ./multus/ks.yaml
