fixup! fixup! update: remove unused items
Signed-off-by: David Pollreisz <pollreisz@gmail.com>

--- a/kubernetes/apps/network/external-dns/internal/secret-external-dns-internal.sops.yaml
+++ b/kubernetes/apps/network/external-dns/internal/secret-external-dns-internal.sops.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-    name: external-dns-internal-secret
+    name: internal-dns-secret
     namespace: network
 stringData:
     EXTERNAL_DNS_RFC2136_TSIG_KEYNAME: ENC[AES256_GCM,data:Hwzm,iv:NjmNEizZVpOlCHvJbCW6S304gmprKzPTBwQrufCAXGw=,tag:4M2p8aDiQjXmCZ4D9Ur0uw==,type:str]
@@ -25,8 +25,8 @@ sops:
             Y0paSHpvY2lUN2dZK3pyNHNMYWNNMVEKBzetagLueYjh1NYbIPyVLxGib3tUlEyH
             lP3uGeMJqPwfnxpZjBmknXBiFcHAtJaIXteVSJwLOmWpFES0q+/lWg==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-01-22T23:55:26Z"
-    mac: ENC[AES256_GCM,data:QU2W7YL6/s71JkpRdptu1l+n1R94ZtCV//Ce6VOdAjmMoo8oPzJb45RzMMjtxyV0EVG1Os8grmvNCmz/q3wcc3fJuaNn8O4tlYiBEtDS/g4/qMPcA5A55KyQaibe5kR0lrEwMB5u51J1zh/YA18PFUGQvyJ3lQ7o8260Q9b96DM=,iv:EWEhq8q36tn2eYRdZ4mCrIFtTSHv3YiW8qK40/Qr9zw=,tag:yXMN727IjRCBJOtjKC83hQ==,type:str]
+    lastmodified: "2024-05-31T23:35:24Z"
+    mac: ENC[AES256_GCM,data:3b0gZtLtctOjlnoQ6frva5tIQ7M0xYTTYWpK+BWog/82hxSINrRs0flUp2znmwa/+guZmt96RmBa3KcHljIXGDwk7so8wonNwwra2bt8OsCKnS64VsdTmSahN43k29rlH3NttXcuQHh7ke+pTTy1pQbQ+flUHY8TYL4MU/ANDik=,iv:t7Rp3z45yNsRQ67rzzV/KyY2e9EYVWi2Qc87USnBLgo=,tag:B5unleveWsj6RIUIWG/ogQ==,type:str]
     pgp: []
     encrypted_regex: ^(data|stringData)$
     version: 3.8.1
